chore: added validation to users, added role "user" as default, added field "repeatPassword"
