# server/controllers/user.js
@@ -1,4 +1,5 @@
 const db = require('../db');
+const userValidation = require('../validations/user');
 class UserController {
   async getUsers(req, res) {
     const users = await db.query('SELECT * FROM users');
@@ -45,19 +46,31 @@ class UserController {
   }
 
   async createUser(req, res) {
+    const { error } = userValidation(req.body);
+    if (error) {
+      const errorMessage = error.details[0].message;
+      return res.status(400).json({ error: errorMessage });
+    }
     try {
-      const {
+      let {
         name,
         surname,
         gender,
         phone,
         password,
+        repeatPassword,
         email,
         floor,
         room,
         role,
         avatar,
       } = req.body;
+      if (password !== repeatPassword) {
+        return res.status(400).json('Паролі не співпадають');
+      }
+      if (!role) {
+        role = 'user';
+      }
       const newUser = await db.query(
         `INSERT INTO users
         (name, surname, gender, phone, password, email, floor, room, role, avatar) values ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10) RETURNING *`,
@@ -76,11 +89,9 @@ class UserController {
       );
       res.json(newUser.rows[0]);
     } catch (error) {
-      console.log(
-        'При создании пользователя получился Lil Peep',
-        error.message
-      );
+      return res.status(400).json({ error: error.message });
     }
+
     // #swagger.tags = ['Users']
     // #swagger.summary = 'Create a new user'
     // #swagger.description = 'Creates a new user with the provided information'
@@ -89,10 +100,11 @@ class UserController {
                description: 'User object',
                schema: {
                     $name: 'John',
-                    $surname: 'Doe',
+                    surname: 'Doe',
                     $gender: 'man',
                     $phone: '+380123456789',
                     $password: '123456789',
+                    $repeatPassword: '123456789',
                     email: 'john.doe@example.com',
                     $floor: 5,
                     $room: 34,
@@ -145,37 +157,54 @@ class UserController {
   }
 
   async updateUser(req, res) {
-    const {
-      id,
-      name,
-      surname,
-      gender,
-      phone,
-      password,
-      email,
-      floor,
-      room,
-      role,
-      avatar,
-    } = req.body;
-    const user = await db.query(
-      'UPDATE users set name = $2, surname = $3, gender=$4, phone = $5, password = $6,' +
-        'email = $7, floor = $8, room = $9, role = $10, avatar = $11 WHERE id = $1 RETURNING *',
-      [
+    const { error } = userValidation(req.body);
+    if (error) {
+      const errorMessage = error.details[0].message;
+      return res.status(400).json({ error: errorMessage });
+    }
+    try {
+      let {
         id,
         name,
         surname,
         gender,
         phone,
         password,
+        repeatPassword,
         email,
         floor,
         room,
         role,
         avatar,
-      ]
-    );
-    res.json(user.rows[0]);
+      } = req.body;
+      if (password !== repeatPassword) {
+        return res.status(400).json('Паролі не співпадають');
+      }
+      if (!role) {
+        role = 'user';
+      }
+      const user = await db.query(
+        'UPDATE users set name = $2, surname = $3, gender=$4, phone = $5, password = $6,' +
+          'email = $7, floor = $8, room = $9, role = $10, avatar = $11 WHERE id = $1 RETURNING *',
+        [
+          id,
+          name,
+          surname,
+          gender,
+          phone,
+          password,
+          email,
+          floor,
+          room,
+          role,
+          avatar,
+        ]
+      );
+      res.json(user.rows[0]);
+    } catch (error) {
+      console.log(error.message);
+    }
+
     // #swagger.tags = ['Users']
     // #swagger.summary = 'Update a user'
     // #swagger.description = 'Updates a user by user id with the provided information'
@@ -185,10 +214,11 @@ class UserController {
                 schema: {
                     $id: 5,
                     $name: 'John',
-                    $surname: 'Doe',
+                    surname: 'Doe',
                     $gender: 'man',
                     $phone: '+380123456789',
                     $password: '123456789',
+                    $repeatPassword: '123456789',
                     email: 'john.doe@example.com',
                     $floor: 5,
                     $room: 34,
